# geocap

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  storage.py
backend/app/middleware/: auth.py
backend/app/models/: capture.py  user.py
backend/app/routers/: auth.py  captures.py  users.py
backend/app/schemas/: auth.py  capture.py  user.py
backend/app/services/: auth.py  capture.py  token_utils.py  user.py  users.py
backend/tests/: conftest.py  test_auth.py  test_captures.py  test_uploads.py  test_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/api/: auth.test.ts  auth.ts  captures.test.ts  captures.ts  client.ts  schemas.ts  user.ts
frontend/src/component/: AppHeader.tsx  LocationPanel.tsx  LoginPopup.tsx
frontend/src/hooks/: useAuth.ts  useCaptures.ts
frontend/src/lib/: capture.ts  queryClient.tsx
frontend/src/routes/: __root.tsx  _auth.tsx  index.tsx  login.tsx  register.tsx
frontend/src/routes/_auth/: dash.tsx
frontend/src/routes/_auth/captures/: $id.tsx  new.tsx
frontend/src/stores/: authStore.ts
frontend/src/test/: server.ts  setup.ts
